<resources>
    <string name="app_name">SugarMe</string>
    <string name="app_name_perfil">SugarMe</string>
    <string name="app_name_edPerfil">Editar Perfil</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="telefone">Telefone:</string>
    <string name="dtNascimento">Data de Nascimento:</string>
    <string name="cpf">CPF:</string>
    <string name="crm">CRM:</string>
    <string name="paciente">Paciente</string>
    <string name="medico">Medico</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="dadosIncorretos">Por favor, preencha os dados corretamente</string>
    <string name="inseridoSucesso">Dados salvos com sucesso!</string>
    <string name="logout">Logout</string>
    <string name="especialidade">Especialidade</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="dataInvalida">Data inválida!</string>
    <string name="confirmarExclusao">Confirma a EXCLUSÃO do seu cadastro?</string>
    <string name="sim">Sim</string>
    <string name="nao">Nao</string>
    <string name="tituloExclusao">Exclusao</string>
    <string name="edicaoPaciente">Edição Paciente</string>
    <string name="edicaoMedico">Edição Médico</string>
    <string name="salvar">Salvar</string>
    <string name="selecioneRadio">Selecione o tipo de usuário!</string>
    <string name="telefoneInvalido">Telefone inválido!</string>
    <string name="cpfInvalido">CPF inválido!</string>
    <string name="crmInvalido">CRM inválido!</string>
    <string name="especialidadeInvalida">Especialidade inválida!</string>
    <string name="nomeInvalido">Nome inválido!</string>
    <string name="title_activity_diary">DiaryActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_medical_info">MedicalInfoActivity</string>
    <string name="title_activity_complication">ComplicationActivity</string>
    <string name="mediaGlicemica">Média glicêmica(mg/dl):</string>
    <string name="peso">Peso(kg):</string>
    <string name="dataNascimento">Data de Nascimento:</string>
    <string name="altura">Altura(cm):</string>
    <string name="informacoesMedicas">Informações Médicas</string>
    <string name="tipoDiabetes">Tipo Diabetes:</string>
    <string name="tipo1">Tipo 1</string>
    <string name="tipo2">Tipo 2</string>
    <string name="gestacional">Gestacional</string>
    <string name="anoDescoberta">Ano de Descoberta</string>
    <string name="anoTratamento">Ano do Início do Tratamento</string>
    <string name="tipotratmento">Tipo de Tratamento: </string>
    <string name="tipoInsulina">Insulina</string>
    <string name="tipoMedicacao">Medicação</string>
    <string name="tipoAlimentar">Dieta Restrititva</string>
    <string name="tipoEsporte">Atividades Físicas</string>
    <string name="outrasDoencas">Outras enfermidades:</string>
    <string name="colesterol">Colesterol</string>
    <string name="pressaoAlta">Pressão Alta</string>
    <string name="obesidade">Obesidade</string>
    <string name="triglicerideos">Triglicerídeos</string>
    <string name="sedentarismo">Sedentarismo</string>
    <string name="voltar">Voltar</string>
    <string name="title_activity_paciente">PacienteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome Paciente</string>
    <string name="nav_header_subtitle">Diabetes Tipo X</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="Adicionar">Adicionar</string>
    <string name="title_activity_info_medicas">InfoMedicasActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="app_name_Perfil">Perfil</string>
    <string name="editarCadastro">Editar Cadastro</string>
    <string name="app_name_Cadastro">Edição do Cadastro</string>
    <string name="action_editar_perfil">Editar Perfil</string>
    <string name="action_gerenciar_cadastro">Gerenciar Cadastro</string>
    <string name="app_name_CadastroInicial">Complete seu Cadastro</string>
    <string name="perfil_tipo_diabetes">Diabetes Tipo %s</string>
    <string name="perfil_data">XX/XX/XXXX</string>
    <string name="perfil_tratamento">Tratamento feito com:</string>
    <string name="perfil_inicio">Início do tratamento em: %s</string>
    <string name="dtIntercorrencia">Data:</string>
    <string name="anotacoes">Anotações:</string>
    <string name="sintomas">Sintomas:</string>
    <string name="faltaAr">Falta de Ar</string>
    <string name="tontura">Tontura</string>
    <string name="PressaoBaixa">Pressão baixa</string>
    <string name="hipoglicemia">Hipoglicemia</string>
    <string name="hiperglicemia">Hiperglicemia</string>
    <string name="nauseaVomito">Náusea e Vômito</string>
    <string name="sedeExcessiva">Sede Excessiva</string>
    <string name="title_activity_diario_glicemico">DiarioGlicemicoActivity</string>
    <string name="diario_ultimaleitura">Últimas Leituras</string>
    <string name="diario_historico">Ver histórico</string>
    <string name="diario_registrar">Registrar Leitura</string>
    <string name="diarioEscala">mg/dl</string>
    <string name="diarioSampleLeitura">90</string>
    <string name="app_name_Diario">Diário Glicêmico</string>
    <string name="nauseaDesmaio">Desmaio</string>
    <string name="internacao">Internação</string>
    <string name="erro_firebase">Deu ruim Hermano</string>
    <string name="app_name_Historico_Diario">Histórico de medições</string>
    <string name="deletarItemHistorico">Deseja deletar o item?</string>
    <string name="app_name_Add_Inter">Adicionar Intercorrência</string>
    <string name="cansaco">Cansaço</string>
    <string name="caimbra">Câimbra</string>
    <string name="visao">Visão embaçada</string>
    <string name="miccao">Micção excessiva</string>
    <string name="hrIntercorrencia">Hora:</string>
</resources>