<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.MedicalInfoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center"
        tools:context=".View.MedicalInfoActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <!--Data Nascimento-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dataNascimento"
                android:ems="10"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <!--Peso-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!--Altura-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/altura"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>


        <!--Texto da activity - Informações Médicas-->
        <TextView
            android:id="@+id/textViewTipoDiabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:gravity="center"
            android:text="@string/tipoDiabetes" />

        <!--Tipo Diabetes-->
        <RadioGroup
            android:id="@+id/textRadioGroupTipo_diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radioButtonTipo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo1" />

            <RadioButton
                android:id="@+id/radioButtonTipo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo2" />

            <RadioButton
                android:id="@+id/radioButtonTipo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gestacional" />

        </RadioGroup>


        <!--Ano Descoberta-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textAnoDescoberta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/anoDescoberta"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <!--Ano Tratamento-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textAnoTratamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/anoTratamento"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:id="@+id/textViewTipoTratamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/tipotratmento" />


        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoMedicacao" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoAlimentar" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoInsulina" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoEsporte" />


        <TextView
            android:id="@+id/textViewDoencasAssociadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/outrasDoencas" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colesterol" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pressaoAlta" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/obesidade" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triglicerideos" />


        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sedentarismo" />


        <!--Botao Salvar-->
        <Button
            android:id="@+id/buttonSalvarInfoMedica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

        </LinearLayout>

</ScrollView>